# Choice

./: README.md
byok-lib/: README.md
byok-lib/backend-node/: README.md  package-lock.json  package.json
byok-lib/backend-node/src/: LLMFactory.ts  index.ts  middleware.ts  types.ts
byok-lib/example-app/backend/: example-node.ts  example-python.py  package-lock.json  package.json  server.ts  server_python.py  tsconfig.json
byok-lib/example-app/frontend/: index.html
byok-lib/frontend/: README.md  package.json
byok-lib/frontend/src/: ApiClient.ts  KeyManager.ts  SettingsUI.ts  index.ts  types.ts
byok-lib/litellm/: README.md  config.yaml  docker-compose.yml  pyproject.toml  start-proxy.ps1  start-proxy.sh
byok_lib/: .gitignore  README.md  main.py  pyproject.toml
byok_lib/frontend/: package-lock.json
byok_lib/frontend/src/: KeyManager.ts  SettingsUI.ts  index.ts  types.ts
byok_lib/src/byok/: __init__.py  _extract.py  _middleware.py  _types.py
byok_lib/src/byok_lib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/: package-lock.json  package.json
frontend/src/: ApiClient.ts  KeyManager.ts  SettingsUi.ts  index.ts  types.ts
practice/frontend/: types.ts
src/byok/: _extract.py  _middleware.py
