[project]
name = "byok-lib"
version = "0.1.0"
description = "Bring Your Own Key — a lightweight library that lets users supply their own API keys. Frontend widget + backend helper."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "starlette>=0.27.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100.0"]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "uvicorn>=0.30",
    "fastapi>=0.100.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
